# MH_POSTPROCESS

./: .gitignore  batch_log.txt  export_csv.py  format_preview.py  main.py  processor.py  test_format.py
csv_exports/: llm_evaluation_deepseek-ai_DeepSeek-V3_1.csv  llm_evaluation_gpt-4_1-2025-04-14.csv  llm_evaluation_meta-llama_Llama-4-Maverick-17B-128E-Instruct-FP8.csv  llm_facial_analysis.csv  phq_facial_analysis.csv  phq_scores.csv
data/: bulk_summary.txt
data/user_101_NasywaLarisa_session1/: llm_analysis.jsonl  llm_conversation.json  metadata.json  phq_analysis.jsonl  phq_responses.json  session_info.json  summary.txt
data/user_101_NasywaLarisa_session2/: llm_analysis.jsonl  llm_conversation.json  metadata.json  phq_analysis.jsonl  phq_responses.json  session_info.json  summary.txt
data/user_102_Chelin_session1/: llm_analysis.jsonl  llm_conversation.json  metadata.json  phq_analysis.jsonl  phq_responses.json  session_info.json  summary.txt
data/user_102_Chelin_session2/: llm_analysis.jsonl  llm_conversation.json  (+5 more)
llm_postprocessor/: .gitignore  main.py  pyproject.toml
llm_postprocessor/examples/: prompt_builder_usage.py
llm_postprocessor/llm_postprocessor/: config.py
llm_postprocessor/llm_postprocessor/io/: json_writer.py
llm_postprocessor/llm_postprocessor/llm/: client.py  prompt_builder.py  prompts.py
llm_postprocessor/llm_postprocessor/postprocessor/: chains.py
llm_postprocessor/llm_postprocessor/schemas/: input_schemas.py
llm_postprocessor/llm_postprocessor/utils/: helpers.py
package/: .gitignore  README.md  models.py  pyproject.toml
(+1837 files in other folders)
